--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -305,6 +305,7 @@
 			axios.post("/param/findallparams.do").then(response=>{
 				if(response.data.status === 0){
 					this.classes = response.data.data;
+					console.log(this.classes);
 				}else{
 					console.log(response.data.msg);
 				}
