--- a/src/main/resources/static/commodity-search.html
+++ b/src/main/resources/static/commodity-search.html
@@ -79,7 +79,7 @@
 						<div class="catagory-right">
 							<ul class="text-4 text-general-1">
 								<li :class="{active: selected_class == 0}" @click="selected_class = 0, search(keyword, selected_class)">全部</li>
-								<li v-for="cls, index in classes" :key="index" :class="{active: selected_class == cls.class_id}" @click="selected_class = cls.class_id, search(keyword, selected_class)">{{cls.name}}</li>
+								<li v-for="cls, index in classes" :key="index" :class="{active: selected_class == cls.id}" @click="selected_class = cls.id, search(keyword, selected_class)">{{cls.name}}</li>
 							</ul>
 						</div>
 					</div>
@@ -137,6 +137,15 @@
 		        	if(window.location.search !== ''){
 		        		const query =  decodeURI(window.location.search.trim());
 		        		this.keyword = query.substring(1, query.length);
+		        		let res = this.keyword.split('=')
+						//首页点击分类
+		        		if(res.length!=0)
+						{
+							this.keyword = "";
+							this.selected_class = res[1];
+						}
+
+		        		console.log(this.keyword)
 		        	}
 		        	this.load_classes();
 		        	this.search(this.keyword, this.selected_class);
@@ -157,6 +166,7 @@
 						if(page_index === undefined){
 							page_index = 0;
 						}
+						//console.log(keyword,type,page_size,page_index)
 						const params = new URLSearchParams();
 						params.append("keyword", keyword);
 						params.append("classId", type);
@@ -182,6 +192,7 @@
 						axios.post("/param/findallparams.do").then(response=>{
 							if(response.data.status === 0){
 								this.classes = response.data.data;
+								console.log(this.classes)
 							}else{
 								console.log(response.data.msg);
 							}
