--- a/src/main/resources/static/address.html
+++ b/src/main/resources/static/address.html
@@ -108,7 +108,10 @@
 						label="操作"
 						width="120">
 						<template slot-scope="scope">
-							<span class="text-4 text-general-1"><span class="pointer" @click="alert('暂不支持')">编辑</span> | <span class="pointer" @click="remove_address(scope.row.id)">删除</span></span>
+							<span class="text-4 text-general-1">
+<!--								<span class="pointer" @click="alert('暂不支持')">编辑</span> | -->
+								<span class="pointer" @click="remove_address(scope.row.id)">删除</span>
+							</span>
 					    </template>
 					  </el-table-column>
 					  <el-table-column
