--- a/src/main/resources/static/commodity-search.html
+++ b/src/main/resources/static/commodity-search.html
@@ -69,7 +69,7 @@
 					<div class="m-t-12 m-b-12">
 						<el-breadcrumb separator-class="el-icon-arrow-right">
 							<el-breadcrumb-item ><a href="index.html">首页</a> </el-breadcrumb-item>
-						  <el-breadcrumb-item>某个类型:</el-breadcrumb-item>
+						  <el-breadcrumb-item>产品</el-breadcrumb-item>
 						</el-breadcrumb>
 					</div>
 					<div class="catagory">
@@ -78,11 +78,20 @@
 						</div>
 						<div class="catagory-right">
 							<ul class="text-4 text-general-1">
+								<!--一级分类-->
 								<li :class="{active: selected_class == 0}" @click="selected_class = 0, search(keyword, selected_class)">全部</li>
 								<li v-for="cls, index in classes" :key="index" :class="{active: selected_class == cls.id}" @click="selected_class = cls.id, search(keyword, selected_class)">{{cls.name}}</li>
+								<li></li>
 							</ul>
 						</div>
 					</div>
+<!--					<div class="catagory">-->
+<!--					<div class="catagory-left text-4 text-important" style="font-weight: 900;">-->
+<!--						配件类型-->
+<!--					</div>-->
+<!--					&lt;!&ndash;二级分类&ndash;&gt;-->
+<!--					&lt;!&ndash;三级分类&ndash;&gt;-->
+<!--					</div>-->
 				</div>
 				<div class="commodities m-t-20">
 					<el-row :gutter="12">
@@ -130,7 +139,7 @@
 						selected_class: 0,
 						products: [],
 						count: 0,
-						page_size: 10
+						page_size: 12,
 					};
 		        },
 		        created(){
@@ -138,8 +147,9 @@
 		        		const query =  decodeURI(window.location.search.trim());
 		        		this.keyword = query.substring(1, query.length);
 		        		let res = this.keyword.split('=')
+						console.log(res)
 						//首页点击分类
-		        		if(res.length!=0)
+		        		if(res.length>1)
 						{
 							this.keyword = "";
 							this.selected_class = res[1];
@@ -166,7 +176,11 @@
 						if(page_index === undefined){
 							page_index = 0;
 						}
-						//console.log(keyword,type,page_size,page_index)
+						if(type == undefined)
+						{
+							type = 0;
+						}
+						console.log(keyword,type,page_size,page_index)
 						const params = new URLSearchParams();
 						params.append("keyword", keyword);
 						params.append("classId", type);
@@ -186,7 +200,7 @@
 							this.$message.error("连接服务器异常");
 						});
 					},
-					/* 加载类型列表 */
+					/* 加载类型列表 （一级）*/
 					load_classes(){
 						/*获取类型列表*/
 						axios.post("/param/findallparams.do").then(response=>{
