--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>登录 | 机械配件商城</title>
 	<link rel="stylesheet" type="text/css" href="css/common.css" />
+	<link rel="stylesheet" type="text/css" href="css/login.css" />
     <link rel="stylesheet" type="text/css" href="./element-ui/index.css">
 	<link rel="stylesheet" type="text/css" href="components/min-width-container.css" />
 	<link rel="stylesheet" type="text/css" href="components/header-simple.css">
@@ -39,31 +40,59 @@
     <div id="app">
 		<header-simple></header-simple>
 		<min-width-container>
-			<div class="app-content">
-				<div class="app-content-title">
-					<h3>一个账号，玩转商城所有的服务！</h3>
-					<h6 class="text-general-1 m-t-4">购机械，购二手设备，购配件，购模型，服务保修</h6>
-				</div>
-				<div class="app-content-form m-t-20">
-					<div class="app-content-form-item">
-						<div class="m-r-8"><i class="el-icon-s-custom text-important-very text-1"></i></div>
-						<div><el-input v-model="account" placeholder="用户名/已验证的手机号码"></el-input></div>
-					</div>
-					<div class="app-content-form-item">
-						<div class="m-r-8"><i class="el-icon-key text-important-very text-1"></i></div>
-						<div><el-input v-model="password" placeholder="密码" show-password></el-input></div>
-					</div>
-					<div class="app-content-form-item">
-						<div><el-checkbox v-model="remember">记住密码</el-checkbox></div>
-						<div class="right">
-							<el-button type="text" @click="window.location.href='/password-forget1.html'">忘记密码</el-button>
-							<el-button type="text" @click="window.location.href='/register.html'">免费注册</el-button>
+<!--			<div class="app-content">-->
+<!--				<div class="app-content-title">-->
+<!--					<h3>一个账号，玩转商城所有的服务！</h3>-->
+<!--					<h6 class="text-general-1 m-t-4">购机械，购二手设备，购配件，购模型，服务保修</h6>-->
+<!--				</div>-->
+<!--				<div class="app-content-form m-t-20">-->
+<!--					<div class="app-content-form-item">-->
+<!--						<div class="m-r-8"><i class="el-icon-s-custom text-important-very text-1"></i></div>-->
+<!--						<div><el-input v-model="account" placeholder="用户名/已验证的手机号码"></el-input></div>-->
+<!--					</div>-->
+<!--					<div class="app-content-form-item">-->
+<!--						<div class="m-r-8"><i class="el-icon-key text-important-very text-1"></i></div>-->
+<!--						<div><el-input v-model="password" placeholder="密码" show-password></el-input></div>-->
+<!--					</div>-->
+<!--					<div class="app-content-form-item">-->
+<!--						<div><el-checkbox v-model="remember">记住密码</el-checkbox></div>-->
+<!--						<div class="right">-->
+<!--							<el-button type="text" @click="window.location.href='/password-forget1.html'">忘记密码</el-button>-->
+<!--							<el-button type="text" @click="window.location.href='/register.html'">免费注册</el-button>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div>-->
+<!--						<el-button type="primary" size="small" style="width: 100%;" @click="login">登录</el-button>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+			<!-- 中间登录 -->
+			<div>
+				<form action="#" method="post" novalidate="novalidate">
+					<div class="login_box">
+						<div class="login_box_left">
+							<h1>一个账号，玩转商城所有服务！</h1>
+							<h2>购机械，购二手装备，购配件，购模型，服务保修</h2>
+							<div class="login_name_box">
+								<div class="login_name_icon"></div>
+								<input type="text" id="username" name="username" class="loginname" maxlength="25" tabindex="1" placeholder="用户名/已验证手机号"  v-model="account">
+							</div>
+							<div class="check_code_tip" id="usernameError" style="display:none"></div>
+							<div class="login_code_box">
+								<div class="login_code_icon"></div>
+								<input type="password" id="password" name="password" class="logincode" maxlength="20" tabindex="2" autocomplete="off" placeholder="密码" v-model="password" >
+							</div>
+							<div class="check_code_tip" id="passwordError" style="display:none"></div>
+							<div class="forg_code_box">
+								<input type="checkbox" id="isRememberUsername" name="isRememberUsername" value="true" tabindex="4" v-model="remember">
+								<span>&nbsp;&nbsp;&nbsp;记住用户名</span>
+								<a @click="window.location.href='/password-forget1.html'">忘记密码</a>
+								<a @click="window.location.href='/register.html'">免费注册</a>
+							</div>
+							<input type="button" class="login_btn" value="登录" style="width:341px;cursor:pointer;color:#ffffff;" @click="login">
 						</div>
 					</div>
-					<div>
-						<el-button type="primary" size="small" style="width: 100%;" @click="login">登录</el-button>
-					</div>
-				</div>
+				</form>
 			</div>
 		</min-width-container>
 		<footer-image></footer-image>
