--- a/src/main/resources/static/pay.html
+++ b/src/main/resources/static/pay.html
@@ -77,7 +77,7 @@
 						<div><img src="images/qrcode.jpg" width="102" height="102"/></div>
 						<div class="m-l-20">
 							<p>订单号: {{order.orderNo}}</p>
-							<p class="m-t-16">卖家名称: 学者科技官方旗舰店</p>
+							<p class="m-t-16">卖家名称: 艾氪森官方旗舰店</p>
 						</div>
 						<div class="text-1" style="color: #FE7E0C; font-weight: 900;">{{order.amount.toFixed(2)}}元</div>
 					</div>
